; ModuleID = '/home/carl/AnghaBench/linux/drivers/ide/extr_ide-acpi.c_ide_acpi_exec_tfs.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/ide/extr_ide-acpi.c_ide_acpi_exec_tfs.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { i32, i32 }

@.str = private unnamed_addr constant [32 x i8] c"call get_GTF, drive=%s port=%d\0A\00", align 1
@.str.1 = private unnamed_addr constant [20 x i8] c"get_GTF error (%d)\0A\00", align 1
@.str.2 = private unnamed_addr constant [30 x i8] c"call set_taskfiles, drive=%s\0A\00", align 1
@.str.3 = private unnamed_addr constant [26 x i8] c"set_taskfiles error (%d)\0A\00", align 1
@.str.4 = private unnamed_addr constant [8 x i8] c"ret=%d\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @ide_acpi_exec_tfs(%struct.TYPE_5__* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.TYPE_5__*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i64, align 8
  %7 = alloca i64, align 8
  store %struct.TYPE_5__* %0, %struct.TYPE_5__** %3, align 8
  %8 = load %struct.TYPE_5__*, %struct.TYPE_5__** %3, align 8
  %9 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %8, i32 0, i32 0
  %10 = load i32, i32* %9, align 4
  %11 = load %struct.TYPE_5__*, %struct.TYPE_5__** %3, align 8
  %12 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %11, i32 0, i32 1
  %13 = load i32, i32* %12, align 4
  %14 = call i32 (i8*, i32, ...) @DEBPRINT(i8* getelementptr inbounds ([32 x i8], [32 x i8]* @.str, i64 0, i64 0), i32 %10, i32 %13)
  %15 = load %struct.TYPE_5__*, %struct.TYPE_5__** %3, align 8
  %16 = call i32 @do_drive_get_GTF(%struct.TYPE_5__* %15, i32* %5, i64* %6, i64* %7)
  store i32 %16, i32* %4, align 4
  %17 = load i32, i32* %4, align 4
  %18 = icmp slt i32 %17, 0
  br i1 %18, label %19, label %23

19:                                               ; preds = %1
  %20 = load i32, i32* %4, align 4
  %21 = call i32 (i8*, i32, ...) @DEBPRINT(i8* getelementptr inbounds ([20 x i8], [20 x i8]* @.str.1, i64 0, i64 0), i32 %20)
  %22 = load i32, i32* %4, align 4
  store i32 %22, i32* %2, align 4
  br label %44

23:                                               ; preds = %1
  %24 = load %struct.TYPE_5__*, %struct.TYPE_5__** %3, align 8
  %25 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %24, i32 0, i32 0
  %26 = load i32, i32* %25, align 4
  %27 = call i32 (i8*, i32, ...) @DEBPRINT(i8* getelementptr inbounds ([30 x i8], [30 x i8]* @.str.2, i64 0, i64 0), i32 %26)
  %28 = load %struct.TYPE_5__*, %struct.TYPE_5__** %3, align 8
  %29 = load i32, i32* %5, align 4
  %30 = load i64, i64* %6, align 8
  %31 = call i32 @do_drive_set_taskfiles(%struct.TYPE_5__* %28, i32 %29, i64 %30)
  store i32 %31, i32* %4, align 4
  %32 = load i64, i64* %7, align 8
  %33 = inttoptr i64 %32 to i8*
  %34 = call i32 @kfree(i8* %33)
  %35 = load i32, i32* %4, align 4
  %36 = icmp slt i32 %35, 0
  br i1 %36, label %37, label %40

37:                                               ; preds = %23
  %38 = load i32, i32* %4, align 4
  %39 = call i32 (i8*, i32, ...) @DEBPRINT(i8* getelementptr inbounds ([26 x i8], [26 x i8]* @.str.3, i64 0, i64 0), i32 %38)
  br label %40

40:                                               ; preds = %37, %23
  %41 = load i32, i32* %4, align 4
  %42 = call i32 (i8*, i32, ...) @DEBPRINT(i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str.4, i64 0, i64 0), i32 %41)
  %43 = load i32, i32* %4, align 4
  store i32 %43, i32* %2, align 4
  br label %44

44:                                               ; preds = %40, %19
  %45 = load i32, i32* %2, align 4
  ret i32 %45
}

declare dso_local i32 @DEBPRINT(i8*, i32, ...) #1

declare dso_local i32 @do_drive_get_GTF(%struct.TYPE_5__*, i32*, i64*, i64*) #1

declare dso_local i32 @do_drive_set_taskfiles(%struct.TYPE_5__*, i32, i64) #1

declare dso_local i32 @kfree(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
